--- a/views/loan_calculator/index.html
+++ b/views/loan_calculator/index.html
@@ -52,7 +52,8 @@
 
     <div class="row">
         <div class="col-sm-3 col-sm-offset-0">
-            <button class="btn btn-success btn-block" id="add-loan">+ add loan</button>
+            <button class="btn btn-success btn-lg" id="add-loan">+ add loan</button>
+            <button class="btn btn-secondary btn-lg" id="add-test-data">add test data</button>
         </div>
 
     </div>
