finished change log text in jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,3 +21,15 @@ html(lang="en")
 					a(data-toggle="modal", data-target="#helpModal", href="#") help \
 					a(data-toggle="modal", data-target="#aboutModal", href="#") about \
 					a(href="/fi_calculator") fi_calculator
+			hr
+			.row
+				.col-sm-12
+					p(class="center").
+						2015-04-05 Check out the new financial independence calculator 
+						at  #[a(href="/fi_calculator") unbury.us/fi_calculator]
+					p(class="center").
+						2015-04-04 You should notice that the address bar saves monthly payment now.  
+						To update old links, visit them and update your monthly payment and use the new link.
+					p(class="center").
+						To view your loans later, simply copy the link in the
+						address bar. You can paste it in to your address bar later to view your loans.</p>					
