--- a/views/index.jade
+++ b/views/index.jade
@@ -1,35 +1,55 @@
 doctype html
 html(lang="en")
-	head
-		title= pageTitle
-		meta(name="description", content="unbury.us is an application that calculates payment plans based off of loan information to become debt free.")
-		meta(name="keywords", content="loan, loan calculator, debt free, web application, personal finance, sean freiburg, jquery")
-		meta(name="viewport", content="width=device-width", initial-scale="1")
-		link(rel="icon", href="assets/src/img/favicon.ico", type="image/x-icon")
-		link(rel="shortcut icon", href="assets/src/img/favicon.ico", type="image/x-icon")
-		link(href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css", rel="stylesheet")
-		link(href="/stylesheets/style.css", rel="stylesheet")
-	body
-		.container-fluid
-			.row
-				.col-sm-3.col-sm-offset-3
-					h1(id="title")
-					a(class="title", href="/") unbury.us
-				.col-sm-4
-					h3 get unburied from debt
-				.col-sm-2
-					a(data-toggle="modal", data-target="#helpModal", href="#") help \
-					a(data-toggle="modal", data-target="#aboutModal", href="#") about \
-					a(href="/fi_calculator") fi_calculator
-			hr
-			.row
-				.col-sm-12
-					p(class="center").
-						2015-04-05 Check out the new financial independence calculator 
-						at  #[a(href="/fi_calculator") unbury.us/fi_calculator]
-					p(class="center").
-						2015-04-04 You should notice that the address bar saves monthly payment now.  
-						To update old links, visit them and update your monthly payment and use the new link.
-					p(class="center").
-						To view your loans later, simply copy the link in the
-						address bar. You can paste it in to your address bar later to view your loans.</p>					
+  head
+    title= pageTitle
+    meta(name="description", content="unbury.us is an application that calculates payment plans based off of loan information to become debt free.")
+    meta(name="keywords", content="loan, loan calculator, debt free, web application, personal finance, sean freiburg, jquery")
+    meta(name="viewport", content="width=device-width", initial-scale="1")
+    link(rel="icon", href="assets/src/img/favicon.ico", type="image/x-icon")
+    link(rel="shortcut icon", href="assets/src/img/favicon.ico", type="image/x-icon")
+    link(href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css", rel="stylesheet")
+    link(href="/stylesheets/style.css", rel="stylesheet")
+  body
+    .container-fluid
+      .row
+        .col-sm-3.col-sm-offset-3
+          h1(id="title")
+          a(class="title", href="/") unbury.us
+        .col-sm-4
+          h3 get unburied from debt
+        .col-sm-2
+          a(data-toggle="modal", data-target="#helpModal", href="#") help \
+          a(data-toggle="modal", data-target="#aboutModal", href="#") about \
+          a(href="/fi_calculator") fi_calculator
+      hr
+      .row
+        .col-sm-12
+          p(class="center").
+            2015-04-05 Check out the new financial independence calculator 
+            at  #[a(href="/fi_calculator") unbury.us/fi_calculator]
+          p(class="center").
+            2015-04-04 You should notice that the address bar saves monthly payment now.  
+            To update old links, visit them and update your monthly payment and use the new link.
+          p(class="center").
+            To view your loans later, simply copy the link in the address bar. You can paste it in to your address bar later to view your loans.
+      hr
+      div#loan-inputs
+      .row
+        .col-sm-3.col-sm-offset-0
+          button(class="btn btn-success btn-block", id="add-loan") + add loan
+      hr
+      .row
+        .col-sm-2
+          h4 monthly payment
+          input(class="form-control", id="monthly-payment", placeholder="0")
+        .col-sm-4.col-sm-offset-1
+          h4 payment type
+            #[a(data-toggle="modal", data-target="#paymentTypeHelpModal", href="#") #[span(class="questions") ?]]
+          .row
+            .col-sm-6
+              button(id="avalanche-btn", class="btn btn-primary,  btn-block") Avalanche
+            .col-sm-6 
+              button(id="snowball-btn", class="btn btn-default btn-block") snowball
+        .col-sm-2.col-sm-offset-1
+            h4 &nbsp;
+            button(id="calculate", class="btn btn-default btn-block") calculate
