added bower modules and started transition to materialize

--- a/views/fi_calculator/index.html
+++ b/views/fi_calculator/index.html
@@ -8,17 +8,19 @@
           content='loan, loan calculator, debt free, web application, personal finance, sean freiburg, jquery'/>
 
     <link rel="icon" href="assets/src/img/favicon.ico" type="image/x-icon">
+
     <link rel="shortcut icon" href="assets/src/img/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/bower_components/materialize/bin/materialize.css">
+    <link rel="stylesheet" href="../../bower_components/angular/angular-csp.css">
     <link href="/stylesheets/style.css" rel="stylesheet">
 </head>
 <body>
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-sm-3 col-sm-offset-3">
+        <div class="col s3 offset-3">
             <h1 id="title"><a class="title" href="/">unbury.us</a></h1>
         </div>
         <div class="col-sm-4">
@@ -191,6 +193,10 @@
 <script src="javascripts/fi_calculator/router.js"></script>
 <script src="javascripts/fi_calculator/lib.js"></script>
 <script src="javascripts/fi_calculator/init.js"></script>
+
+<!-- bower libs -->
+<script src="bower_components/materialize/bin/materialize.js"></script>
+<script src="../../bower_components/angular/angular.min.js"></script>
 
 </body>
 </html>
