--- a/views/fi_calculator/index.html
+++ b/views/fi_calculator/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="/bower_components/materialize/bin/materialize.css">
-    <link rel="stylesheet" href="../../bower_components/angular/angular-csp.css">
+    <link rel="stylesheet" href="/bower_components/angular/angular-csp.css">
     <link href="/stylesheets/style.css" rel="stylesheet">
 </head>
 <body>
@@ -195,8 +195,8 @@
 <script src="javascripts/fi_calculator/init.js"></script>
 
 <!-- bower libs -->
-<script src="bower_components/materialize/bin/materialize.js"></script>
-<script src="../../bower_components/angular/angular.min.js"></script>
+<script src="/bower_components/materialize/bin/materialize.js"></script>
+<script src="/bower_components/angular/angular.min.js"></script>
 
 </body>
 </html>
